<resources>
    <string name="app_name">ודיברת</string>
    <string name="back">חזור</string>
    <string name="or">או</string>
    <string name="allowed_letters_regex" translatable="false">[אבגדהוזחטיכלמנסעפצקרשתץףןםךةچڢڤڥڨگپئڜژىئؤابتثجحخدذرزسشصضطظعغفقكلمنهوءيآ]+</string>
    <string name="allowed_letters" translatable="false">אבגדהוזחטיכלמנסעפצקרשתץףןםךةچڢڤڥڨگپئڜژىئؤابتثجحخدذرزسشصضطظعغفقكلمنهوءيآ</string>
    <string name="yes">כן</string>
    <string name="no">לא</string>
    <string name="ok">אישור</string>
    <string name="next">הבא</string>
    <string name="skip">דלג</string>
    <string name="create">יצירה</string>
    <string name="cancel">ביטול</string>
    <string name="error">שגיאה</string>
    <string name="edit">עריכה</string>
    <string name="save">שמירה</string>
    <string name="delete">הסרה</string>
    <string name="copy">העתקה</string>
    <string name="net_error">קיימת בעיה בחיבור לאינטרנט</string>
    <string name="single_item_selected">נבחר</string>
    <string name="multi_item_selected">נבחרו</string>
    <string name="user_profile_title">הפרופיל שלי</string>
    <string name="user_title_picture_overlay">תמונת נושא</string>
    <string name="user_profile_picture_overlay">תמונת פרופיל</string>
    <string name="reportAbuse">דווח על הטרדה</string>
    <string name="generateQuestion">מחולל השאלות</string>
    <string name="user_profile_hobbies">התחביבים שלי</string>
    <string name="user_profile_characteristics">אני מזדהה בתור</string>
    <string name="action_edit_profile_title">ערוך פרופיל</string>
    <string name="action_save_profile_edit">שמור שינויים</string>
    <string name="edit_changes_saved_successfully">השינויים בוצעו בהצלחה</string>
    <string name="edit_discard_changes_title">ביטול שינויים</string>
    <string name="edit_discard_changes_message">בטוח שברצונך לבטל את השינויים?</string>
    <string name="action_logout_title">התנתקות</string>
    <string name="user_profile_dialog_title_suffix_m">, תעלה תמונה שלך</string>
    <string name="user_profile_dialog_title_suffix_f">, תעלי תמונה שלך</string>
    <string name="user_profile_dialog_description">יש לבחור תוכן ראוי בלבד\nתוכן לא ראוי יימחק</string>
    <string name="user_profile_dialog_camera_button">מצלמה</string>
    <string name="user_profile_dialog_gallery_button">מהגלריה</string>
    <string name="user_profile_dialog_dismiss_button">ביטול</string>
    <string name="dialog_logout_title">התנתקות</string>
    <string name="dialog_logout_message_m">בטוח שברצונך להתנתק?</string>
    <string name="dialog_logout_message_f">בטוחה שברצונך להתנתק?</string>
    <string name="profile_edit_title">עריכת פרופיל</string>
    <string name="characteristics_tab_title">מאפייני זהות</string>
    <string name="hobbies_tab_title">תחביבים</string>
    <string name="chat_candidates_title">בחירת שותף</string>
    <string name="chat_candidate_accept_button_m">בוא נדבר</string>
    <string name="chat_candidate_accept_button_f">בואי נדבר</string>
    <string name="chat_search_title">חיפוש</string>
    <string name="chat_search_characteristics_title">מאפייני זהות</string>
    <string name="chat_search_extra_options_title">פרטים אישיים</string>
    <string name="filter_by_school_text">סינון לפי בית ספר</string>
    <string name="filter_by_region_text">סינון לפי מקום מגורים</string>
    <string name="filter_by_grade_text">סינון לפי שכבה</string>
    <string name="chat_search_button">חפש</string>
    <string name="chat_search_wrong_details_title">פרטים שגויים</string>
    <string name="chat_search_wrong_region_message">יש לבחור מקום מגורים הנמצא ברשימה</string>
    <string name="chat_search_wrong_school_message">יש לבחור בית ספר הנמצא ברשימה</string>
    <string name="chat_search_no_characteristics_chosen_message">יש לבחור מאפיין זהות אחד לפחות</string>
    <string name="no_matching_students">לא נמצאו תלמידים</string>
    <string name="user_setup_title">הגדרת משתמש</string>
    <string name="choose_gender_text">כיצד לפנות אלייך?</string>
    <string name="user_setup_characteristics_title">מאפייני זהות</string>
    <string name="user_setup_extra_options_title">פרטים אישיים</string>
    <string name="user_setup_school_info_title">פרטי בית הספר</string>
    <string name="user_setup_hobbies_title">תחביבים</string>
    <string name="user_setup_region_title">מיקום בית ספר</string>
    <string name="user_setup_grade_title">שכבה</string>
    <string name="user_setup_grade_tenth">י</string>
    <string name="user_setup_grade_eleventh">יא</string>
    <string name="user_setup_grade_twelfth">יב</string>
    <string name="user_setup_school_title">בית ספר</string>
    <string name="user_setup_first_name_title">שם פרטי</string>
    <string name="user_setup_last_name_title">שם משפחה</string>
    <string name="user_setup_characteristics_hint_text">ניתן לבחור יותר מאפשרות אחת</string>
    <string name="user_setup_done_title">סיים</string>
    <string name="text_field_hint">עברית/ערבית בלבד</string>
    <string name="text_field_error">- יש לכתוב בעברית/עברית\n- בלי רווחים\n- בלי תווים מיוחדים </string>
    <string name="user_setup_missing_details_dialog_title">פרטים חסרים</string>
    <string name="checking_document">מסתנכרן עם השרת</string>
    <string name="user_setup_male_option">בן</string>
    <string name="user_setup_female_option">בת</string>
    <string name="user_setup_gender_missing">יש לבחור בן/בת</string>
    <string name="user_setup_first_name_missing">יש למלא את השדה שם פרטי</string>
    <string name="user_setup_wrong_school_and_region_combination">בית הספר לא קיים במיקום שהוכנס, יש לבחור בית ספר ומיקום מהרשימה</string>
    <string name="user_setup_last_name_missing">יש למלא את השדה שם משפחה</string>
    <string name="user_setup_school_missing">יש לבחור בית ספר מהרשימה</string>
    <string name="user_setup_region_missing">יש לבחור מקום מגורים מהרשימה</string>
    <string name="user_setup_grade_missing">יש לבחור שכבה</string>
    <string name="user_setup_characteristics_missing">יש לבחור מאפייני זהות</string>
    <string name="user_setup_hobbies_missing">יש לבחור תחביבים</string>
    <string name="chat_room_abuse_dialog_title">דיווח</string>
    <string name="chat_room_abuse_dialog_report_button">דווח</string>
    <string name="chat_room_abuse_dialog_report_sent">נשלח</string>
    <string name="chat_room_abuse_dialog_next_button">הבא</string>
    <string name="chat_room_abuse_dialog_empty_report_error">יש למלא את הסיבה לדיווח</string>
    <string name="chat_room_abuse_dialog_choose_teacher_error">יש לבחור מורה</string>
    <string name="chat_room_abuse_dialog_hint">כתבו כאן את הסיבות לדיווח</string>
    <string name="chat_room_abuse_dialog_option1">אלימות מילולית</string>
    <string name="chat_room_abuse_dialog_option2">הטרדה מינית</string>
    <string name="chat_room_abuse_dialog_option3">תוכן פוגעני</string>
    <string name="chat_room_abuse_dialog_report_button_m">דווח</string>
    <string name="chat_room_abuse_dialog_report_button_f">דווחי</string>
    <string name="choose_teacher_to_report_hint">בחרו מורה אליו אתם רוצים לדווח</string>
    <string name="reasons_for_report_title">סיבות לדיווח:</string>
    <string name="chat_room_abuse_dialog_back_button">ביטול</string>
    <string name="chat_room_question_generator_title">מחולל השאלות</string>
    <string name="chat_room_question_generator_question_title">מתקשה למצוא נושא לשיחה?\nבחר אחד מהנושאים הבאים:</string>
    <string name="chat_room_question_generator_empty_list_message">אין שאלות עבור הנושא</string>
    <string name="chat_room_enter_message_m">כתוב הודעה</string>
    <string name="chat_room_enter_message_f">כתבי הודעה</string>
    <string name="sending_message">שולח..</string>
    <string name="facebook_app_id">3227815763959885</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb3227815763959885</string>
    <string name="continue_with_facebook_hebrew">היכנס באמצעות פייסבוק</string>
    <string name="sign_out_from_facebook_hebrew">צא מחשבון הפייסבוק</string>
    <string name="sign_in_with_google_hebrew">היכנס באמצעות גוגל</string>
    <string name="email_sign_in">הירשם באמצעות דוא\"ל</string>
    <string name="already_a_user">כבר רשום?</string>
    <string name="sign_in">היכנס</string>
    <string name="login_title">התחברות</string>
    <string name="enter_email_hint">דואר אלקטרוני</string>
    <string name="enter_password_hint">סיסמה</string>
    <string name="sign_up_title">הרשמה</string>
    <string name="enter_password_repeat_hint">אימות סיסמה</string>
    <string name="enter_first_name_hint">שם פרטי</string>
    <string name="enter_last_name_hint">שם משפחה</string>
    <string name="sign_up">הירשם</string>
    <string name="progress_dialog_loading">טוען…</string>
    <string name="sending_verification_email">שולח דוא\"ל אימות</string>
    <string name="email_sent_successfully">ההודעה נשלחה בהצלחה</string>
    <string name="sign_in_error">שגיאה בהתחברות</string>
    <string name="something_went_wrong">אירעה שגיאה</string>
    <string name="blank_input_error">אנא מלא</string>
    <string name="email_format_error">הכנס כתובת מהצורה mail@client.com</string>
    <string name="short_password_error">על הסיסמה להכיל לפחות 8 תווים</string>
    <string name="wrong_password_repeat">הסיסמאות לא זהות</string>
    <string name="class_creation_fab_text">יצירת כיתה</string>
    <string name="finding_connections_text">מוצאים חיבורים</string>
    <string name="teacher_main_title">ודיברת</string>
    <string name="email_not_verified_error">אנא אמת דוא\"ל</string>
    <string name="timeout_error">שגיאה: הפעולה נמשכת זמן רב מידי</string>
    <string name="main_title">ודיברת</string>
    <string name="main_fab_title">מוצאים חברים</string>
    <string name="chat_list_action_title">שיחות</string>
    <string name="classes_list_action_title">כיתות</string>
    <string name="main_menu_search_title">חיפוש</string>
    <string name="user_profile_action_title">פרופיל</string>
    <string name="reports_action_title">דיווחים</string>
    <string name="app_label">Vedibarta</string>
    <string name="class_invite">הזמנה לכיתה</string>
    <string name="successfully_joined_class">הצטרפת לכיתה בהצלחה</string>
    <string name="already_in_class_m">אתה כבר נמצא בכיתה</string>
    <string name="already_in_class_f">את כבר נמצא בכיתה</string>
    <string-array name="menuitems">
        <item>Menu Item 0</item>
        <item>Menu Item 1</item>
        <item>Menu Item 2</item>
    </string-array>
    <string name="sent">נשלח</string>
    <string name="just_now">הרגע</string>
    <string name="before">לפני</string>
    <string name="hours">שעות</string>
    <string name="days">ימים</string>
    <string name="yesterday">אתמול</string>
    <string name="empty_class_list_message_m">אתה לא שותף באף כיתה</string>
    <string name="empty_class_list_message_f">את לא שותפה באף כיתה </string>
    <string name="empty_chat_list_message_m">אתה לא שותף באף שיחה.\nקדימה, חפש חברים</string>
    <string name="empty_chat_list_message_f">את לא שותפה באף שיחה.\nקדימה, חפשי חברים</string>
    <string name="image_not_allowed_message">התמונה אסורה, בחר תמונה אחרת</string>
    <string name="texts_not_allowed_message">אנא בחר תמונה ללא טקסט</string>
    <string name="vedibarta_notification_channel_name">ודיברת</string>
    <string name="payload_display_status">display_status</string>
    <string name="payload_admin_broadcast">admin_broadcast</string>
    <string name="payload_data_message_title">title</string>
    <string name="payload_data_message_body">body</string>
    <string name="payload_data_notification_type">notification_type</string>
    <string name="accept_text">אישור</string>
    <string name="teacher_profile_title">פרופיל מורה</string>
    <string name="enter_family_name_hint">שם משפחה</string>
    <string name="grade_10_radio_text">כיתה י</string>
    <string name="grade_11_radio_text">כיתה יא</string>
    <string name="grade_12_radio_text">כיתה יב</string>
    <string name="teacher_add_school">הוסף בית ספר</string>
    <string name="add">הוספה</string>
</resources>