<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".login.LoginOptionsFragment">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_app_logo"
        app:layout_constraintVertical_bias="0"
        android:scaleX="0.7"
        android:scaleY="0.7"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.facebook.login.widget.LoginButton
            xmlns:facebook="http://schemas.android.com/apk/res-auto"
            facebook:com_facebook_login_text="@string/continue_with_facebook_hebrew"
            facebook:com_facebook_logout_text="@string/sign_out_from_facebook_hebrew"
            android:id="@+id/facebook_login_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:elevation="3dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.shobhitpuri.custombuttons.GoogleSignInButton
            android:id="@+id/google_login_button"
            android:text="@string/sign_in_with_google_hebrew"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/facebook_login_button"
            app:layout_constraintEnd_toEndOf="@+id/facebook_login_button"
            app:layout_constraintStart_toStartOf="@+id/facebook_login_button" />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/google_login_button"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/or"
            android:textSize="16sp" />

        <Button
            android:id="@+id/sign_up_with_email_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:textAllCaps="false"
            app:autoSizeTextType="uniform"
            app:autoSizeMaxTextSize="14sp"
            app:autoSizeMinTextSize="10sp"
            android:text="@string/email_sign_in"
            app:elevation="3dp"
            app:layout_constraintTop_toBottomOf="@+id/or"
            app:layout_constraintEnd_toEndOf="@+id/google_login_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/google_login_button"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/log_in_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_with_email_button">

            <TextView
                android:id="@+id/sign_in_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/sign_in_link"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/already_a_user"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sign_in_link"
                android:layout_width="60dp"
                android:layout_height="25dp"
                android:background="@android:color/transparent"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/sign_in_text"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>