<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/cardTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/schoolInfoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:drawableEnd="@drawable/ic_school"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/teacher_add_school"
            android:textColor="@color/textPrimary"
            android:textSize="20sp" />

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardViewSchoolBody"
        app:layout_constraintTop_toBottomOf="@id/cardTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:padding="16dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/schoolFilterSwitchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_setup_school_title"
            android:textColor="@color/textPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/schoolListSpinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/schoolListSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:completionThreshold="0"
            android:imeOptions="flagNoExtractUi"
            android:popupBackground="@android:color/white"
            android:visibility="visible"
            app:autoSizeMaxTextSize="13sp"
            app:autoSizeMinTextSize="11sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@id/regionFilterSwitchText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/schoolFilterSwitchText" />

        <TextView
            android:id="@+id/regionFilterSwitchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/user_setup_region_title"
            android:textColor="@color/textPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/regionListSpinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/schoolListSpinner">

        </TextView>

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/regionListSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:completionThreshold="0"
            android:dropDownHeight="150dp"
            android:imeOptions="flagNoExtractUi"
            android:popupBackground="@android:color/white"
            android:visibility="visible"
            app:autoSizeMaxTextSize="13sp"
            app:autoSizeMinTextSize="11sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regionFilterSwitchText" />

        <TextView
            android:id="@+id/gradeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/user_setup_grade_title"
            android:textColor="@color/textPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/gradeCheckBoxGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regionListSpinner">

        </TextView>

        <LinearLayout
            android:id="@+id/gradeCheckBoxGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gradeText">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/gradeTwelfth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/user_setup_grade_twelfth" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/gradeEleventh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/user_setup_grade_eleventh" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/gradeTenth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/user_setup_grade_tenth" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gradeCheckBoxGroup">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/add"
                app:backgroundTint="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cancelButton"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/cancel"
                app:backgroundTint="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/addButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

